More editing, plus additional cosmetic fixes from quick skim

--- a/Conclusion/Conclusion.tex
+++ b/Conclusion/Conclusion.tex
@@ -4,7 +4,7 @@ In this thesis analyses of proton-proton collisions recorded by the \ac{CMS} det
 Run 1 and Run 2 of the \ac{LHC} have been presented. The focus of these analyses
 is the search for \ac{BSM} Higgs bosons with tau leptons in the final state.
 
-The search for a heavy Higgs boson decaying to a final state of $bb\Pgt\Pgt$ via two
+The search for a heavy Higgs boson decaying to a final state of $\Pbottom\Pbottom\Pgt\Pgt$ via two
 $125\,\GeV$ Higgs bosons was performed using $19.7\,\invfb$ of data collected at a
 centre of mass energy of $8\,\TeV$ during the 2012 \ac{LHC} data-taking period. Such a final
 state can access areas of the MSSM phase space not easily accessible via other channels.
@@ -15,7 +15,7 @@ the reconstruction of the 4-body mass.
 The resulting mass variable provides good separation between the signal and the dominant
 \ttbar background, and is thus used as the variable for signal extraction. 
 The results of this search are upper limits on production cross section times branching 
-ratio, in a mass range $260<m_H<350\,\GeV$. A combination with a search for \AtoZhtolltautau
+ratio, in a mass range $260<m_{\PHiggs}<350\,\GeV$. A combination with a search for \AtoZhtolltautau
 yields exclusion in the lowest \tanb~region of the low-\tanb~MSSM scenario, as well
 as several areas of the \cosba-\tanb~plane in a \ac{2HDM} scenario \cite{CMS-HIG-14-034}.
 
