--- a/backmatter.tex
+++ b/backmatter.tex
@@ -30,7 +30,7 @@
 \acro{MSSM}[MSSM]{minimal supersymmetric standard model}
 \acro{SM}[SM]{standard model}
 \acro{SUSY}[SUSY]{supersymmetry}
-\acro{2HDM}[2HDM]{Two Higgs Doublet Model}
+\acro{2HDM}[2HDM]{two Higgs doublet model}
 \acro{ECAL}[ECAL]{electromagnetic calorimeter}
 \acro{HCAL}[HCAL]{hadron calorimeter}
 \acro{TIB}[TIB]{Tracker Inner Barrel}
@@ -53,7 +53,7 @@
 \acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
 \acro{RF}[RF]{radio frequency}
 \acro{PF}[PF]{Particle Flow}
-\acro{BDT}[BDT]{Boosted Decision Tree}
+\acro{BDT}[BDT]{boosted decision tree}
 \acro{KF}[KF]{Kalman Filter}
 \acro{CTF}[CTF]{Combinatorial Track Finder}
 \acro{GSF}[GSF]{Gaussian Sum Filter}
