--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,97 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adinda de Wit at 2017-02-21 12:20:34 +0100 
+%% Created for Adinda de Wit at 2017-02-24 14:12:10 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{8TeVst,
+	Collaboration = {CMS},
+	Date-Added = {2017-02-24 13:05:39 +0000},
+	Date-Modified = {2017-02-24 13:06:51 +0000},
+	Doi = {10.1007/JHEP12(2012)035},
+	Eprint = {1209.4533},
+	Journal = {JHEP},
+	Keywords = {8TeV},
+	Pages = {035},
+	Title = {Measurement of the single-top-quark t-channel cross section in pp collisions at $\sqrt{s}=7$ TeV},
+	Volume = {12},
+	Year = {2012}}
+
+@article{8TeVdib,
+	Collaboration = {CMS},
+	Date-Added = {2017-02-24 13:04:30 +0000},
+	Date-Modified = {2017-02-24 13:05:38 +0000},
+	Doi = {10.1016/j.physletb.2013.03.027},
+	Eprint = {1301.4698},
+	Journal = {Phys. Lett. B},
+	Keywords = {8TeV},
+	Pages = {190},
+	Title = {Measurement of the W$^{+}$W$^{-}$ and ZZ production cross sections in pp collisions at $\sqrt{s}=8$ TeV},
+	Volume = {721},
+	Year = {2013}}
+
+@article{hathor2,
+	Author = {P. Kant and O. M. Kind and T. Kintscher and T. Lohse and T. Martini and S. M\"olbitz and P. Rieck and P. Uwer},
+	Date-Added = {2017-02-24 12:58:50 +0000},
+	Date-Modified = {2017-02-24 13:00:27 +0000},
+	Doi = {10.1016/j.cpc.2015.02.001},
+	Eprint = {1406.4403},
+	Journal = {Comput. Phys. Commun},
+	Keywords = {13TeV},
+	Pages = {74-89},
+	Title = {HATHOR for single top-quark prodution: Updated predictions and uncertainty estimates for single top-quark production in hadronic collisions},
+	Volume = {191},
+	Year = {2015}}
+
+@article{hathor1,
+	Author = {M. Aliev and H. Lacker and U. Langenfeld and S. Moch and P. Uwer and M. Wiedermann},
+	Date-Added = {2017-02-24 12:57:29 +0000},
+	Date-Modified = {2017-02-24 12:58:49 +0000},
+	Doi = {10.1016/j.cpc.2010.12.040},
+	Eprint = {1007.1327},
+	Journal = {Comput. Phys. Commun},
+	Keywords = {13TeV},
+	Pages = {1034-1046},
+	Title = {HATHOR  - HAdronic Top and Heavy quarks crOss section calculatoR},
+	Volume = {182},
+	Year = {2011}}
+
+@article{mcfm,
+	Author = {J. M. Campbell and R. K. Ellis and C. Williams},
+	Date-Added = {2017-02-24 12:55:45 +0000},
+	Date-Modified = {2017-02-24 12:57:26 +0000},
+	Doi = {10.1007/JHEP07(2011)018},
+	Eprint = {1105.0020},
+	Journal = {JHEP},
+	Keywords = {13TeV},
+	Pages = {018},
+	Title = {Vector boson pair production at the LHC},
+	Volume = {07},
+	Year = {2011}}
+
+@article{toppp,
+	Author = {M. Czakon and A. Mitov},
+	Date-Added = {2017-02-24 12:48:14 +0000},
+	Date-Modified = {2017-02-24 12:51:15 +0000},
+	Journal = {Comput. Phys. Commun},
+	Keywords = {13TeV},
+	Pages = {2930},
+	Title = {Top++: a program for the calculation of the top-pair cross-section at hadron colliders},
+	Volume = {185},
+	Year = {2014}}
+
+@misc{fewz31,
+	Author = {R. Gavin and Y. Li and F. Petriello and S. Quackenbush},
+	Date-Added = {2017-02-24 12:47:20 +0000},
+	Date-Modified = {2017-02-24 12:48:11 +0000},
+	Howpublished = {\url{http://www.hep.anl.gov/fpetriello/FEWZManual_3.1.pdf}},
+	Keywords = {13TeV},
+	Title = {FEWZ 3.1: A User's Guide},
+	Year = {2012}}
 
 @article{CMSspin,
 	Collaboration = {CMS},
@@ -19,7 +104,8 @@
 	Pages = {3076},
 	Title = {Observation of the diphoton decay of the Higgs boson and measurements of its properties},
 	Volume = {74},
-	Year = {2014}}
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1140/epjc/s10052-014-3076-z}}
 
 @article{ATLASspin,
 	Collaboration = {ATLAS},
@@ -32,7 +118,8 @@
 	Pages = {120},
 	Title = {Evidence for the spin-0 nature of the Higgs boson using ATLAS data},
 	Volume = {726},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.physletb.2013.08.026}}
 
 @article{ATLAS-tautau,
 	Collaboration = {ATLAS},
@@ -45,7 +132,8 @@
 	Pages = {117},
 	Title = {Evidence for the Higgs-boson Yukawa coupling to tau leptons with the ATLAS detector},
 	Volume = {04},
-	Year = {2015}}
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/JHEP04(2015)117}}
 
 @article{HTT-projection,
 	Collaboration = {CMS},
